+ Load the attached document + double click on the second heading line 'Frobnication of the ...' + hit 'delete' + hit ctrl-z to undo notice the lack of undoing ;-) and the cursor jumping to the top of the document. I guess it is some poisonous interaction with not showing red-lining. If I Edit->Changes->Show the redlining, then it behaves as I would expect. I got some nasty crash working on red-lining this document that (I imagine) is related to some funky underlying document tree corruption around this sort of thing.
Created attachment 48516 [details] test file
Reproduced on LibreOffice 3.4 340m1(Build:12) on KDE OpenSuse (Linux). Agree with Michael. Seems like once the red highlighting appears, it erases the history.
relation to Bug 38329 - Undo broken for several actions ?
related to bug 37584 - track changes: deleted text lost ?
I can confirm this for LibreOffice 3.4.1, OOO340m1 (Build:103) using Windowmaker on openSuSE 11.4 (Linux - 64 bit) having "Edit->Changes->Record" checked/enabled, but "Edit->Changes->Show" disabled/unchecked. I even got the crash after some more undoing, redoing actions. If other combinations are used for those track changes options, it works fine. I suggest adding this to "Bug 38993 - [TASK]: Bugfixes required for enterprise deployment LibO 3.4.2" since it is an often used functionality in enterprise use and it cause data losses because of the immanent crash.
[Reproducible] with "LibreOffice 3.4.1 - WIN7 Home Premium (64bit) German UI [OOO340m1 (Build:103)]", but a quick test to create an own sample document failed. Still a problem in Master. I did not check whether DUP
Worked for me with 3.3.3 Portable, so REGRESSION
Seems that LO 3.4.4rc2 (LibreOffice 3.4.4, OOO340m1 (Build:402)) got rid of the crash when messing with the redo/undo actions. Rest of the described bug behavior is still happening with this version of LO.
Reproduced at LO 3.4.4 final at Ubuntu 11.10 by following the steps indicated and the test2.odt.
Since all new unconfirmed bugs start in state UNCONFIRMED now and old unconfirmed bugs were moved to NEEDINFO with a explanatory comment, all bugs promoted above those bug states to NEW and later are automatically confirmed making the CONFIRMED whiteboard status redundant. Thus it will be removed.
ouch, that must be the stupidest regression i've ever put into OOo: when the UndoImpl method of SwRedlineUndoDelete is called, the deleted text is not in the body but in the hidden redline section of the nodes array, because: the stack guard is immediately destroyed, before calling the UndoImpl method it was supposed to cover! regression from CWS undoapi fixed on master: http://cgit.freedesktop.org/libreoffice/core/commit/?id=13424b43c25389e303774c3fb2f2beb3e20ceae5
cherry-picked to -3-4 (637d80a4aebf2b65a855283a68e6dd72e9d6de30) and -3-5 (de998662158e3654ac14469989d27ce963cce935)